[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ramannoodle"
version = "0.3.0"
authors = [
    {name = "Willis O'Leary", email = "wolearyc@gmail.com"},
]
description = "Calculate Raman spectra from first-principles calculations."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["raman", "spectrum", "vasp", "dft", "phonons", "molecular", "dynamics", "polarizability" ]
license = {text = "MIT"}
dependencies = [
    "numpy >= 1.24.0;python_version=='3.10'", # minimum recommended
    "numpy >= 1.24.0;python_version=='3.11'", # minimum recommended
    "numpy >= 1.26.0;python_version=='3.12'", # minimum working
    "scipy >= 1.10.0;python_version=='3.10'", # minimum recommended
    "scipy >= 1.10.0;python_version=='3.11'", # minimum recommended
    "scipy >= 1.11.2;python_version=='3.12'", # minimum working
    "spglib >= 1.16.4;python_version=='3.10'", # minimum working
    "spglib >= 1.16.4;python_version=='3.11'", # minimum working
    "spglib >= 1.16.4;python_version=='3.12'", # minimum working
    "defusedxml >= 0.6.0;python_version=='3.10'", # minimum working
    "defusedxml >= 0.6.0;python_version=='3.11'", # minimum working
    "defusedxml >= 0.6.0;python_version=='3.12'", # minimum working
    "tabulate >= 0.8.8;python_version=='3.10'", # minimum working
    "tabulate >= 0.8.8;python_version=='3.11'", # minimum working
    "tabulate >= 0.8.8;python_version=='3.12'", # minimum working
]

[project.optional-dependencies]

[project.urls]
Documentation = "https://ramannoodle.readthedocs.io/en/latest/"
Repository = "https://github.com/wolearyc/ramannoodle"
Issues = "https://github.com/wolearyc/ramannoodle/issues"

[tool.setuptools.packages.find]
include = ["ramannoodle*"]  # ["*"] by default
exclude = ["reports"]  # empty by default


[tool.pylint.MASTER]
ignore-paths = [ "^docs/.*$",
                 "setup.py" ]

[tool.black]
line-length = 88
force-exclude = '''

(
  /(
      \.git          # root of the project
    | docs
  )/
  | setup.py
)
'''

[tool.mypy]
warn_return_any = "True"
warn_unused_configs = "True"
ignore_missing_imports = "True"
follow_imports = "silent"
disable_error_code = ["method-assign"]
strict = "True"
